[ON-677]: Fix issue with long station names  - Allow text wrapping to keep the width of the stations uniform

--- a/app/styleguides/demo/components/stations-carousel.css
+++ b/app/styleguides/demo/components/stations-carousel.css
@@ -300,7 +300,6 @@ $medium-screen-nav-width: em(728);
           }
           span {
             text-overflow: ellipsis;
-            white-space: nowrap;
             overflow: hidden;
             width: 100%;
             &.station__name {
